fix Safari `btn-field` layout broken

--- a/src/assets/css/objects/btn-field.sass
+++ b/src/assets/css/objects/btn-field.sass
@@ -52,7 +52,7 @@
 
 @media #{$large-up}
 	.btn-field-input
-		width: 65%
+		width: 64%
 
 	.btn-field-btn
-		width: 35%
+		width: 36%
